fix (aurleia-v-grid): updated to version 0.2.4 where the scrollbars works when resizing window

--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -72,9 +72,6 @@
         background-color: transparent !important;
         border: 0 !important;
 
-        .vGrid-body {          
-          overflow: scroll !important;
-        }
 
         .vGrid-header {
           overflow-y: hidden !important;
